force-app/main/default/objects/Character__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is the character active in the campaign?</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>