force-app/main/default/objects/Character__c/fields/Character_s_Archetype__c.field-meta.xml
<CustomField>
    <fullName>Character_s_Archetype__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Character&#39;s Archetype</label>
    <referenceTo>Archetype__c</referenceTo>
    <relationshipLabel>Characters</relationshipLabel>
    <relationshipName>Characters</relationshipName>
    <type>Lookup</type>
</CustomField>