force-app/main/default/objects/Character__c/fields/Initiative_Order__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Order__c</fullName>
    <description>Used to record initiative for instance of encounter.</description>
    <label>Initiative Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>