force-app/main/default/objects/Character__c/fields/PcNpc__c.field-meta.xml
<CustomField>
    <fullName>PcNpc__c</fullName>
    <description>Is this a PC or NPC</description>
    <label>PcNpc</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>NPC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>