force-app/main/default/objects/Character__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <label>Race</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dragonborn</fullName>
            </value>
            <value>
                <fullName>Eladrin</fullName>
            </value>
            <value>
                <fullName>Gnome</fullName>
            </value>
            <value>
                <fullName>Half-Elf</fullName>
            </value>
            <value>
                <fullName>Halfling</fullName>
            </value>
            <value>
                <fullName>Half-Orc</fullName>
            </value>
            <value>
                <fullName>Human</fullName>
            </value>
            <value>
                <fullName>Wood Elf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>