force-app/main/default/objects/Character__c/fields/Stat_10__c.field-meta.xml
<CustomField>
    <fullName>Stat_10__c</fullName>
    <label>Stat 10</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>