force-app/main/default/objects/Character__c/fields/Stat_10_Label__c.field-meta.xml
<CustomField>
    <fullName>Stat_10_Label__c</fullName>
    <label>Stat 10 Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Character_Stats</valueSetName>
    </valueSet>
</CustomField>