force-app/main/default/objects/Character__c/fields/Stat_2_Label__c.field-meta.xml
<CustomField>
    <fullName>Stat_2_Label__c</fullName>
    <label>Stat 2 Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Character_Stats</valueSetName>
    </valueSet>
</CustomField>