force-app/main/default/objects/Character__c/fields/Subrace__c.field-meta.xml
<CustomField>
    <fullName>Subrace__c</fullName>
    <label>Subrace</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Race__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Variant</fullName>
            </value>
            <value>
                <fullName>Lightfoot</fullName>
            </value>
            <value>
                <fullName>Stoutheart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>