force-app/main/default/objects/Character__c/recordTypes/Base.recordType-meta.xml
<RecordType>
    <fullName>Base</fullName>
    <active>true</active>
    <description>Base character template to use to reference when creating encounters.</description>
    <label>Base</label>
</RecordType>