force-app/main/default/objects/Character__c/recordTypes/Instance.recordType-meta.xml
<RecordType>
    <fullName>Instance</fullName>
    <active>true</active>
    <description>An instance of the character to use to record damage and results.</description>
    <label>Instance</label>
</RecordType>